crates/credential/tests/probes/metadata_capability_field.stderr
error[E0609]: no field `capabilities_enabled` on type `&CredentialMetadata`
  --> tests/probes/metadata_capability_field.rs:16:19
   |
16 |     let _ = &meta.capabilities_enabled;
   |                   ^^^^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `base`, `pattern`
